made some sizing changes
changed some widths of the columns

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							<img src="http://cdn.c.photoshelter.com/img-get/I0000OMnZlRKSogw/s/750/750/Charlotte-skyline-dec2011-079.jpg">
 						</div>
 						<div class="col-md-1 col-md-offset-1">
-							<div class="btn-group-vertical" data-spy="affix" data-offset-top="1">
+							<div class="btn-group-vertical">
 							  <a class="btn btn-default" href="https://github.com/"><i class="fa fa-github-alt"></i></a>
 							  <a class="btn btn-default" href="https://slack.com/"><i class="fa fa-slack"></i></a>
 							  <a class="btn btn-default" href="https://www.apple.com"><i class="fa fa-apple"></i></a>
@@ -97,22 +97,41 @@
 	</div>
 	<div class="container C">
 		<div class="row">
-			<div class="col-md-10 col-md-offset-1" id="fancyb">
+			<div class="col-md-4" id="fancyb">
 				<a id="single_1" class="single" href="http://farm1.staticflickr.com/291/18653638823_a86b58523c_b.jpg" title="Lupines (Kiddi Einars)">
 					<img src="http://farm1.staticflickr.com/291/18653638823_a86b58523c_m.jpg" alt="" />
+					
 				</a>
+				<p id="img-descript1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in repre
+				</p>
+			</div>
+			<div class="col-md-4" id="fancyb">
 				<a id="single_2" class="single"  href="http://farm4.staticflickr.com/3826/18875570170_e20cf27a4d_b.jpg" title="Colorful Feldberg II (STEFFEN EGLY)">
 					<img src="http://farm4.staticflickr.com/3826/18875570170_e20cf27a4d_m.jpg" alt="" />
 				</a>
+				<p id="img-descript2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi
+				</p>
+			</div>
+			<div class="col-md-4" id="fancyb">
 				<a id="single_3" class="single" href="http://farm1.staticflickr.com/471/19102574835_d5a7837217_b.jpg" title="Cannon Needles (JustinPoe)">
 					<img src="http://farm1.staticflickr.com/471/19102574835_d5a7837217_m.jpg" alt="" />
 				</a>
+				<p id="img-descript3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit 
+				</p>
 			</div>
 		</div>
 	</div>
 	<div class="container D">
 		<div class="row">
-			<div class="col-md-4 col-md-offset-2">
+			<div class="col-md-5 col-md-offset-1">
 				<h2>About Us</h2>
 				<h5>blah blah blah some more text under here</h5>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -123,7 +142,7 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-5">
 				<div class="flexslider">
 				  <ul class="slides">
 				    <li>
@@ -145,7 +164,7 @@
 	</div>
 	<div class="container E">
 		<div class="row">
-			<div class="col-md-4 col-md-offset-2">
+			<div class="col-md-5 col-md-offset-1">
 				<h2>Contact Us</h2>
 
 				<h4>Address</h4>     <p>something something something</p>
@@ -155,7 +174,7 @@
 				<h4>Phone</h4>       <p>something something something</p>
 			</div>
 
-			<div class="col-md-4">
+			<div class="col-md-4 col-md-offset-1">
 				<iframe
   					width="100%"
   					height="300"
@@ -176,9 +195,11 @@
 					<input type="text" class="form-control" id="usr">
 				</div>
 				<div class="form-group">
-					<label for="pwd">Password:</label>
-					<input type="password" class="form-control" id="pwd">
-				</div>
+    				<label for="inputEmail3">Email:</label>
+    				<!-- <div class="col-sm-10"> -->
+      				<input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+    				<!-- </div> -->
+  				</div>
 				<div class="form-group">
 					<label for="comment">Comment:</label>
 					<textarea class="form-control" rows="5" id="comment"></textarea>
